# todolist

./: .gitignore  .testenv  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-actions.yml
deploy/: docker-compose-deploy.yaml  nginx.conf
skypro/bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
skypro/bot/management/commands/: runbot.py
skypro/bot/migrations/: 0001_initial.py  0002_alter_tguser_verification_code.py.backup
skypro/bot/tg/: bot_data.py  client.py  data_storage.py
skypro/core/: admin.py  models.py  serializers.py  social_middleware.py  urls.py  views.py
skypro/core/migrations/: 0001_initial.py
skypro/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
skypro/goals/migrations/: 0001_initial.py  0002_alter_goal_description_alter_goal_due_date.py  0003_board_goalcategory_board_boardparticipant.py  0005_alter_goalcategory_board.py  0006_alter_goalcategory_board.py
skypro/skypro/: asgi.py  settings.py  urls.py  wsgi.py
skypro/tests/: conftest.py  factories.py
skypro/tests/core/: test_password_change.py  test_user_login.py  test_user_register.py
skypro/tests/goals/: test_board.py  test_category.py  test_goal.py
